--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "tree-sitter-haskell",
+  "name": "tree-sitter-daml",
   "version": "0.23.1",
   "description": "Haskell grammar for tree-sitter",
-  "repository": "https://github.com/tree-sitter/tree-sitter-haskell",
+  "repository": "https://github.com/tree-sitter/tree-sitter-daml",
   "license": "MIT",
   "author": {
     "name": "Rick Winfrey"
@@ -25,7 +25,7 @@
     "incremental",
     "parsing",
     "tree-sitter",
-    "haskell"
+    "daml"
   ],
   "files": [
     "grammar.js",
