--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,10 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "tree-sitter-haskell"
+name = "tree-sitter-daml"
 description = "Haskell grammar for tree-sitter"
 version = "0.23.1"
-keywords = ["incremental", "parsing", "tree-sitter", "haskell"]
+keywords = ["incremental", "parsing", "tree-sitter", "daml"]
 classifiers = [
   "Intended Audience :: Developers",
   "License :: OSI Approved :: MIT License",
@@ -25,7 +25,7 @@ name = "Rick Winfrey"
 name = "Torsten Schmits"
 
 [project.urls]
-Homepage = "https://github.com/tree-sitter/tree-sitter-haskell"
+Homepage = "https://github.com/tree-sitter/tree-sitter-daml"
 
 [project.optional-dependencies]
 core = ["tree-sitter~=0.22"]
